k8s/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: gcr.io/kubernet-infonerc/laravel-app
          ports:
            - containerPort: 9000
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.33.3
          command:
            - "/cloud_sql_proxy"
            - "-instances=kubernet-infonerc:us-central1:laravel-mysql-instance=tcp:3306"
          securityContext:
            runAsNonRoot: true
