k8s/angular-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
spec:
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: gcr.io/kubernet-infonerc/angular-app
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: angular
spec:
  type: ClusterIP
  selector:
    app: angular
  ports:
    - port: 80
      targetPort: 80
