k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-angular-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: laravel
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular
                port:
                  number: 80
